@@ -555,23 +555,18 @@ literals (Bug#20852)."
 
 (ert-deftest bytecomp-tests--old-style-backquotes ()
   "Check that byte compiling warns about old-style backquotes."
-  (should (boundp 'lread--old-style-backquotes))
   (bytecomp-tests--with-temp-file source
     (write-region "(` (a b))" nil source)
     (bytecomp-tests--with-temp-file destination
       (let* ((byte-compile-dest-file-function (lambda (_) destination))
-            (byte-compile-error-on-warn t)
-            (byte-compile-debug t)
-            (err (should-error (byte-compile-file source))))
+             (byte-compile-debug t)
+             (err (should-error (byte-compile-file source))))
         (should (equal (cdr err)
-                       (list "!! The file uses old-style backquotes !!
-This functionality has been obsolete for more than 10 years already
-and will be removed soon.  See (elisp)Backquote in the manual.")))))))
+                       '("Loading `nil': old-style backquotes detected!")))))))
 
 
 (ert-deftest bytecomp-tests-function-put ()
   "Check `function-put' operates during compilation."
-  (should (boundp 'lread--old-style-backquotes))
   (bytecomp-tests--with-temp-file source
     (dolist (form '((function-put 'bytecomp-tests--foo 'foo 1)
                     (function-put 'bytecomp-tests--foo 'bar 2)
